# lobby-browser

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
resources/: resources.rc
src/: application.cc  application.h  main.cc
src/engine/: engine.h  engine_impl.cc  engine_impl.h  presenter.h
src/engine/backends/: auth_backend.h  auth_token.h  lobby_backend.h  result.h
src/engine/backends/eos/: eos_data.h  eos_data_serialize.cc  eos_data_serialize.h  eos_lobby_backend.cc  eos_lobby_backend.h  eos_lobby_connector.cc  eos_lobby_connector.h
src/engine/backends/modio/: modio_data.h  modio_data_serialize.cc  modio_data_serialize.h  modio_mod_backend.cc  modio_mod_backend.h
src/engine/backends/nakama/: nakama_data.h  nakama_data_serialize.cc  nakama_data_serialize.h  nakama_lobby_backend.cc  nakama_lobby_backend.h
src/engine/backends/pavlov/: pavlov_data.cc  pavlov_data.h  pavlov_lobby_backend.cc  pavlov_lobby_backend.h
src/engine/backends/quake3/: quake3_master_backend.cc  quake3_master_backend.h
src/engine/backends/steam/: steam_auth_backend.cc  steam_auth_backend.h  steam_in_process_auth_backend.cc  steam_in_process_auth_backend.h  steam_manager.cc  steam_manager.h  steam_subprocess_auth_backend.cc  steam_subprocess_auth_backend.h  steam_subprocess_main.cc
src/engine/config/: config_loader.cc  config_loader.h
src/engine/games/: base_game.cc  base_game.h  game.h
src/engine/games/contractors/: contractors_data.cc  contractors_data.h  contractors_game.cc  contractors_game.h
src/engine/games/pavlov/: pavlov_data.cc  pavlov_data.h  pavlov_game.cc  pavlov_game.h  pavlov_players_data_store.cc  pavlov_players_data_store.h
src/engine/games/quake3/: quake3_data.cc  quake3_data.h  quake3_game.cc  quake3_game.h
src/models/: auth.h  config.h  game.h  game_config.h  lobby_connector.h  search.h
src/models/serialize/: auth.cc  auth.h  config.cc  config.h
src/ui/: event_handler.h  presenter.cc  presenter.h
src/ui/wx/: wx_auto_search_dialog.cc  wx_auto_search_dialog.h  wx_game_config_dialog.cc  wx_game_config_dialog.h  wx_game_page.cc  wx_game_page.h  wx_lobby_connect_dialog.cc  wx_lobby_connect_dialog.h  wx_main_window.cc  wx_main_window.h  wx_players_list_model.cc  wx_players_list_model.h  wx_preferences_dialog.cc  wx_preferences_dialog.h  wx_presenter.cc  wx_presenter.h  wx_results_list_model.cc  wx_results_list_model.h  wx_search_players_results_dialog.cc  wx_search_players_results_dialog.h  wx_theme.cc  wx_theme.h  wx_tray_icon.cc  wx_tray_icon.h  wx_ui_config.cc  wx_ui_config.h  wx_web_view_members_template.cc  wx_web_view_members_template.h
src/utils/: arg_parse.cc  arg_parse.h  strings.cc  strings.h  subprocess.h  subprocess_win.cc  timer.cc  timer.h  vectors.h
